Added documentation for RosterController
